tests/fixtures/invalid/str_div_list.py
# Cannot divide Str and List[int]
x: float = "hello" / [1, 2, 3]
